--- a/src/components/styling/Form.css
+++ b/src/components/styling/Form.css
@@ -1,6 +1,8 @@
 /* The Modal (background) */
 .modal {
-    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -9,7 +11,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.2);
 }
 
 /* Modal Content */
@@ -105,7 +107,6 @@ input[type=file]{
 }
 
 .loader {
-	display: none;
     z-index: 1;
     margin: 10px auto;
     border: 5px solid #f3f3f3;
@@ -114,7 +115,7 @@ input[type=file]{
     width: 30px;
     height: 30px;
     -webkit-animation: spin 0.5s linear infinite;
-    animation: spin 0.5s linear infinite;
+    animation: spin 1.5s linear infinite;
 }
 
 @-webkit-keyframes spin {
