--- a/src/components/styling/Form.css
+++ b/src/components/styling/Form.css
@@ -13,6 +13,20 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.2);
 }
+.form-modal {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.2);
+}
 
 /* Modal Content */
 .modal-content {
@@ -65,7 +79,7 @@ input[type=file]{
 .property-form {
 	border-radius: 5px;
 	background-color: #f2f2f2;
-	padding: 30px;
+	padding: 50px 30px 30px;
 	margin: 50px 20px;
 	display: none;
 }
@@ -133,7 +147,7 @@ input[type=file]{
 		width: 400px;
         margin: auto;
         margin-top: 100px;
-        padding: 40px;
+        padding: 60px 40px 40px;
 	}
 }
 
