--- a/src/components/styling/Form.css
+++ b/src/components/styling/Form.css
@@ -1,21 +1,6 @@
 /* The Modal (background) */
-.modal {
+.modal{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.2);
-}
-.form-modal {
-    display: none;
-    align-items: center;
     justify-content: center;
     position: fixed;
     z-index: 1;
@@ -71,16 +56,15 @@ input[type=file]{
 	border-radius: 4px;
 	cursor: pointer;
 }
-
 .submit-sign-up:hover {
 	background-color: #45a049;
 }
-
 .property-form {
 	border-radius: 5px;
-	background-color: #f2f2f2;
-	padding: 50px 30px 30px;
-	margin: 50px 20px;
+    background-color: #ffffff;
+    padding: 50px 30px 30px;
+    margin: 30px 20px;
+    height: fit-content;
 }
 .modal-close-btn{
 	position: relative;
