fix pagination and typography

--- a/src/components/styling/Nav.css
+++ b/src/components/styling/Nav.css
@@ -2,7 +2,7 @@
     background: white;
     width: 100%;
     height: auto;
-    padding: 4% 10%;
+    padding: 4%;
 }
 .nav-container.closed{
     height: 70px;
